--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1462,6 +1462,11 @@ pre {
 .cid-qrjmpzdnOo LABEL {
   color: #073b4c;
 }
+.cid-qroapysk5Z {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
 .cid-qriPNArzHw .navbar {
   padding: .5rem 0;
   background: #ffffff;
