--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1432,6 +1432,91 @@ pre {
     display: block;
   }
 }
+.cid-qroaRxmpf5 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-qroaRxmpf5 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qroaRxmpf5 .container-table {
+  margin: 0 auto;
+}
+.cid-qroaRxmpf5 .scroll {
+  overflow-x: auto;
+  padding: 0;
+}
+.cid-qroaRxmpf5 .dataTables_wrapper {
+  display: block;
+}
+.cid-qroaRxmpf5 .dataTables_wrapper .search {
+  margin-bottom: .5rem;
+}
+.cid-qroaRxmpf5 .dataTables_wrapper .table {
+  overflow-x: auto;
+}
+.cid-qroaRxmpf5 table {
+  width: 100% !important;
+  margin-top: 6px;
+  border: 1px solid #cccccc;
+  margin-bottom: 0;
+}
+.cid-qroaRxmpf5 table th {
+  border-top: none;
+  transition: all .2s;
+  border-bottom: none;
+}
+.cid-qroaRxmpf5 table th:hover {
+  background: #cccccc;
+  color: #000000;
+}
+.cid-qroaRxmpf5 table td {
+  border-top: 1px solid #cccccc;
+}
+.cid-qroaRxmpf5 table.table {
+  background: #1c3683;
+}
+.cid-qroaRxmpf5 .dataTables_filter {
+  text-align: right;
+  margin-bottom: .5rem;
+}
+.cid-qroaRxmpf5 .dataTables_filter label {
+  display: inline;
+  white-space: normal !important;
+}
+.cid-qroaRxmpf5 .dataTables_filter input {
+  display: inline;
+  width: auto;
+  margin-left: .5rem;
+  border-radius: 100px;
+  padding-left: 1rem;
+}
+.cid-qroaRxmpf5 .dataTables_info {
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  white-space: normal !important;
+}
+@media (max-width: 992px) {
+  .cid-qroaRxmpf5 .dataTables_filter {
+    text-align: center;
+  }
+}
+@media (max-width: 350px) {
+  .cid-qroaRxmpf5 .dataTables_filter {
+    text-align: center;
+  }
+  .cid-qroaRxmpf5 .dataTables_filter input {
+    width: 100% !important;
+    margin-left: 0 !important;
+  }
+}
+.cid-qroaRxmpf5 .head-item {
+  color: #f7d367;
+}
+.cid-qroaRxmpf5 .body-item {
+  color: #ffffff;
+}
 .cid-qrjmpzdnOo {
   padding-top: 105px;
   padding-bottom: 90px;
