--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1156,7 +1156,7 @@ pre {
 .cid-qriPXSLxTB {
   padding-top: 135px;
   padding-bottom: 135px;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
 }
 .cid-qriPXSLxTB h2 {
   text-align: center;
@@ -1555,6 +1555,242 @@ pre {
 .cid-qroapysk5Z .media-container-row .mbr-text {
   color: #1c3683;
 }
+.cid-qrHoNRM0C9 .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-qrHoNRM0C9 .modal-body .close span {
+  font-style: normal;
+}
+.cid-qrHoNRM0C9 .carousel-inner > .active,
+.cid-qrHoNRM0C9 .carousel-inner > .next,
+.cid-qrHoNRM0C9 .carousel-inner > .prev {
+  display: table;
+}
+.cid-qrHoNRM0C9 .carousel-control .icon-next,
+.cid-qrHoNRM0C9 .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-qrHoNRM0C9 .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qrHoNRM0C9 .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-qrHoNRM0C9 .boxed-slider {
+  position: relative;
+  padding: 93px 0;
+}
+.cid-qrHoNRM0C9 .boxed-slider > div {
+  position: relative;
+}
+.cid-qrHoNRM0C9 .container img {
+  width: 100%;
+}
+.cid-qrHoNRM0C9 .container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.cid-qrHoNRM0C9 .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-qrHoNRM0C9 .mbr-table-cell {
+  padding: 0;
+}
+.cid-qrHoNRM0C9 .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-qrHoNRM0C9 .carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
+  display: flex;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-qrHoNRM0C9 .mbr-overlay {
+  z-index: 1;
+}
+.cid-qrHoNRM0C9 .container-slide.container {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-qrHoNRM0C9 .carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+@media (max-width: 576px) {
+  .cid-qrHoNRM0C9 .carousel-item .container {
+    width: 100%;
+  }
+}
+.cid-qrHoNRM0C9 .carousel-item-next.carousel-item-left,
+.cid-qrHoNRM0C9 .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.cid-qrHoNRM0C9 .active.carousel-item-right,
+.cid-qrHoNRM0C9 .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.cid-qrHoNRM0C9 .active.carousel-item-left,
+.cid-qrHoNRM0C9 .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.cid-qrHoNRM0C9 .mbr-slider .carousel-control {
+  top: 50%;
+  width: 70px;
+  height: 70px;
+  margin-top: -1.5rem;
+  font-size: 35px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all .3s;
+}
+.cid-qrHoNRM0C9 .mbr-slider .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-qrHoNRM0C9 .mbr-slider .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-qrHoNRM0C9 .mbr-slider .carousel-control .mbr-iconfont {
+  font-size: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-qrHoNRM0C9 .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-qrHoNRM0C9 .mbr-slider .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-qrHoNRM0C9 .mbr-slider .carousel-indicators li {
+  max-width: 20px;
+  height: 20px;
+  max-height: 20px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: .5;
+  transition: all .3s;
+}
+.cid-qrHoNRM0C9 .mbr-slider .carousel-indicators li.active,
+.cid-qrHoNRM0C9 .mbr-slider .carousel-indicators li:hover {
+  opacity: .9;
+}
+.cid-qrHoNRM0C9 .mbr-slider .carousel-indicators li::after,
+.cid-qrHoNRM0C9 .mbr-slider .carousel-indicators li::before {
+  content: none;
+}
+.cid-qrHoNRM0C9 .mbr-slider .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 576px) {
+  .cid-qrHoNRM0C9 .mbr-slider .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-qrHoNRM0C9 .mbr-slider > .container img {
+  width: 100%;
+}
+.cid-qrHoNRM0C9 .mbr-slider > .container img + .row {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-qrHoNRM0C9 .mbr-slider > .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+@media (max-width: 576px) {
+  .cid-qrHoNRM0C9 .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-qrHoNRM0C9 .mbr-slider .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-qrHoNRM0C9 .mbr-slider .mbr-table-cell {
+  padding: 0;
+}
+.cid-qrHoNRM0C9 .carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.cid-qrHoNRM0C9 .full-screen .slider-fullscreen-image {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.cid-qrHoNRM0C9 .full-screen .slider-fullscreen-image.active {
+  display: -o-flex;
+}
+.cid-qrHoNRM0C9 .full-screen .container {
+  width: auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+.cid-qrHoNRM0C9 .full-screen .carousel-item .container.container-slide {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-qrHoNRM0C9 .full-screen .carousel-item .container.container-slide img {
+  display: none;
+}
+.cid-qrHoNRM0C9 .mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.cid-qrHoNRM0C9 .mbr-overlay ~ .container-slide {
+  z-index: auto;
+}
 .cid-qriPNArzHw .navbar {
   padding: .5rem 0;
   background: #ffffff;
@@ -1914,4 +2150,55 @@ pre {
     border-right: .30em solid transparent;
     border-left: .30em solid transparent;
   }
+}
+.cid-qrHnfc4SKf {
+  padding-top: 120px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-qrHnfc4SKf .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qrHomEhlUT {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qrHomEhlUT .card-img a {
+  display: block;
+  padding-top: 2rem;
+}
+.cid-qrHomEhlUT .card-box {
+  padding: 0 2rem;
+}
+.cid-qrHomEhlUT .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-qrHomEhlUT .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-qrHomEhlUT h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-qrHomEhlUT p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-qrHomEhlUT .mbr-text {
+  color: #767676;
+}
+.cid-qrHomEhlUT .card-wrapper {
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-qrHomEhlUT .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
 }
