--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -964,7 +964,7 @@ pre {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #073b4c;
+  background-color: #1c3683;
 }
 .cid-qriPNArzHw button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
