create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1810,7 +1810,7 @@ pre {
   font-family: 'Ubuntu', sans-serif;
 }
 .cid-qrHoNRM0C9 P {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-qriPNArzHw .navbar {
   padding: .5rem 0;
