create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -51,10 +51,10 @@ body {
 }
 .display-7 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 .display-7 > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.92rem;
 }
 /* ---- Fluid typography for mobile devices ---- */
 /* 1.4 - font scale ratio ( bootstrap == 1.42857 ) */
@@ -624,13 +624,13 @@ a:hover {
   box-shadow: none;
   color: #565656;
   font-family: 'Rubik', sans-serif;
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 1.43;
   min-height: 3.5em;
   padding: 1.07em .5em;
 }
 .form-control > .mbr-iconfont {
-  font-size: 1.6rem;
+  font-size: 1.92rem;
 }
 .form-control,
 .form-control:focus {
@@ -2215,4 +2215,485 @@ pre {
 .cid-qrHomEhlUT .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
+}
+.cid-qriPNArzHw .navbar {
+  padding: .5rem 0;
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qriPNArzHw .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-qriPNArzHw a {
+  font-style: normal;
+}
+.cid-qriPNArzHw .nav-item span {
+  padding-right: 0.4em;
+  font-size: 1.6rem;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  top: -0.2em;
+  text-decoration: none;
+}
+.cid-qriPNArzHw .nav-item a {
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qriPNArzHw .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qriPNArzHw .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qriPNArzHw .menu-logo {
+  margin-right: auto;
+}
+.cid-qriPNArzHw .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qriPNArzHw .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qriPNArzHw .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qriPNArzHw .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qriPNArzHw .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qriPNArzHw .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qriPNArzHw .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qriPNArzHw .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qriPNArzHw .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qriPNArzHw .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qriPNArzHw .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qriPNArzHw .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qriPNArzHw .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qriPNArzHw .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qriPNArzHw .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qriPNArzHw .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qriPNArzHw .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qriPNArzHw .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qriPNArzHw .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qriPNArzHw .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qriPNArzHw .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qriPNArzHw .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qriPNArzHw button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qriPNArzHw button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qriPNArzHw button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #1c3683;
+}
+.cid-qriPNArzHw button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qriPNArzHw button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qriPNArzHw button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qriPNArzHw button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qriPNArzHw nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qriPNArzHw nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qriPNArzHw nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qriPNArzHw nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qriPNArzHw .collapsed .btn {
+  display: flex;
+}
+.cid-qriPNArzHw .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qriPNArzHw .collapsed .navbar-collapse.collapsing,
+.cid-qriPNArzHw .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qriPNArzHw .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qriPNArzHw .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qriPNArzHw .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qriPNArzHw .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qriPNArzHw .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qriPNArzHw .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qriPNArzHw .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qriPNArzHw .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qriPNArzHw .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qriPNArzHw .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+  margin-top: .5rem;
+}
+.cid-qriPNArzHw .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qriPNArzHw .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qriPNArzHw .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qriPNArzHw .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qriPNArzHw .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qriPNArzHw img {
+    height: 3.8rem !important;
+  }
+  .cid-qriPNArzHw .btn {
+    display: flex;
+  }
+  .cid-qriPNArzHw button.navbar-toggler {
+    display: block;
+  }
+  .cid-qriPNArzHw .navbar-brand {
+    margin-left: 1rem !important;
+    margin-top: .5rem;
+  }
+  .cid-qriPNArzHw .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qriPNArzHw .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qriPNArzHw .navbar-collapse.collapsing,
+  .cid-qriPNArzHw .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qriPNArzHw .navbar-collapse.collapsing .navbar-nav,
+  .cid-qriPNArzHw .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qriPNArzHw .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qriPNArzHw .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qriPNArzHw .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qriPNArzHw .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qriPNArzHw .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qriPNArzHw .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qriPNArzHw .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qriPNArzHw .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qriPNArzHw .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qriPNArzHw .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+.cid-qroapysk5Z {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-qroapysk5Z .media-container-row .mbr-text {
+  color: #1c3683;
+}
+.cid-quHbcgSGxl {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background: #ffffff;
+}
+.cid-quHbcgSGxl .image-block {
+  margin: auto;
+}
+.cid-quHbcgSGxl figcaption {
+  position: relative;
+}
+.cid-quHbcgSGxl figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-quHbcgSGxl .image-block {
+    width: 100% !important;
+  }
+}
+.cid-quH815f3ul {
+  padding-top: 120px;
+  padding-bottom: 45px;
+  background-image: url("../../../assets/images/omg-2000x924.jpg");
+}
+.cid-quH815f3ul H2 {
+  text-align: left;
+}
+.cid-quH815f3ul .mbr-section-subtitle {
+  text-align: left;
+}
+.cid-quH9GzQ1sN {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-quH9GzQ1sN .mbr-text,
+.cid-quH9GzQ1sN blockquote {
+  color: #767676;
+}
+.cid-quH9GzQ1sN .mbr-text DIV {
+  text-align: left;
+}
+.cid-quHa2Y0nCB {
+  padding-top: 15px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-quHa2Y0nCB .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-quHa2Y0nCB .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-quHa2Y0nCB .mbr-text {
+  color: #767676;
+  text-align: left;
+}
+.cid-quHcDsHJJ4 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-quHcDsHJJ4 .mbr-text,
+.cid-quHcDsHJJ4 blockquote {
+  color: #767676;
+}
+.cid-quHcWNXBAg {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: #003973;
+  background: linear-gradient(0deg, #003973, #ffffff);
+}
+.cid-quHcWNXBAg .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-quHcWNXBAg .video-block {
+    width: 100% !important;
+  }
+}
+.cid-quHdiOKMxD {
+  padding-top: 60px;
+  padding-bottom: 75px;
+  background-color: #003973;
+}
+.cid-quHdiOKMxD .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-quHdiOKMxD .section-text {
+  padding: 2rem 0;
+  text-align: center;
+}
+.cid-quHdiOKMxD .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-quHdiOKMxD .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-quHdiOKMxD .section-text DIV {
+  text-align: center;
 }
