create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2216,6 +2216,14 @@ pre {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
+.cid-quIxoCb7Se {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-quIxoCb7Se .media-container-row .mbr-text {
+  color: #1c3683;
+}
 .cid-qriPNArzHw .navbar {
   padding: .5rem 0;
   background: #ffffff;
