--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4484,6 +4484,118 @@ body {
 .cid-r9PUPvmN0B .mbr-section-btn {
   text-align: right;
 }
+.cid-r9Uh0sfYur {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-r9Uh0sfYur h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-r9Uh0sfYur p {
+  color: #767676;
+  text-align: left;
+}
+.cid-r9Uh0sfYur .card-box {
+  padding-top: 2rem;
+}
+.cid-r9Uh0sfYur .card-wrapper {
+  height: 100%;
+}
+.cid-r9UjIPg9BM {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-r9UjIPg9BM .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-r9UjIPg9BM .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-r9UjIPg9BM .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-r9UjIPg9BM .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r9UjIPg9BM .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r9UjIPg9BM .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r9UjIPg9BM .img-item {
+    width: 100% !important;
+  }
+  .cid-r9UjIPg9BM .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
+  }
+}
+.cid-r9UjdS7Cn1 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.cid-r9UimBMbkx {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-r9UimBMbkx .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-r9UimBMbkx .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-r9UimBMbkx .mbr-text {
+  color: #767676;
+}
+.cid-r9UizsCIRO {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-r9UizsCIRO .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-r9UizsCIRO .mbr-figure {
+    padding-top: 1rem;
+  }
+}
+.cid-r9UizsCIRO .mbr-text {
+  color: #767676;
+}
+.cid-r9UhTppB6W {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #64ca3a;
+}
 .cid-r9PVKL3hDB {
   padding-top: 60px;
   padding-bottom: 60px;
