--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4504,6 +4504,167 @@ body {
 .cid-r9Uh0sfYur .card-wrapper {
   height: 100%;
 }
+.cid-r9Unguftue {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-r9Unguftue .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-r9Unguftue .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-r9Unguftue .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-r9Unguftue .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r9Unguftue .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r9Unguftue .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r9Unguftue .img-item {
+    width: 100% !important;
+  }
+  .cid-r9Unguftue .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
+  }
+}
+.cid-r9UmnLM6bl {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #4e6451;
+}
+.cid-r9UmnLM6bl .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-r9UmnLM6bl .section-text {
+  padding: 2rem 0;
+}
+.cid-r9UmnLM6bl .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-r9UmnLM6bl .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-r9UlNZPME3 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-r9UlNZPME3 .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-r9UlNZPME3 .mbr-figure {
+    padding-top: 1rem;
+  }
+}
+.cid-r9UlNZPME3 .mbr-text {
+  color: #767676;
+}
+.cid-r9UlBnsslW {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-r9UlBnsslW .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-r9UlBnsslW .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-r9UlBnsslW .mbr-text {
+  color: #767676;
+}
+.cid-r9Uku3wGdc {
+  padding-top: 60px;
+  padding-bottom: 75px;
+  background-image: url("../../../assets/images/videoblocks-blue-abstract-hexagons-animation-with-ripple-effect-background-backdrop-ru7ytgfunx-thumbnail-full01-1920x1080.png");
+}
+.cid-r9Uku3wGdc .mbr-section-subtitle B {
+  color: #f7d367;
+}
+.cid-r9UkWXrDN5 {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-r9UkWXrDN5 .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-r9UkWXrDN5 .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-r9UkWXrDN5 .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-r9UkWXrDN5 .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-r9UkWXrDN5 .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-r9UkWXrDN5 .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-r9UkWXrDN5 .img-item {
+    width: 100% !important;
+  }
+  .cid-r9UkWXrDN5 .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
+  }
+}
 .cid-r9UjIPg9BM {
   padding-top: 45px;
   padding-bottom: 45px;
