--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4189,6 +4189,24 @@ body {
     width: 100% !important;
   }
 }
+.cid-rb8TeFO22z {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rb8TeFO22z .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rb8TeFO22z .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rb8TeFO22z .mbr-text {
+  color: #767676;
+}
 .cid-qroapysk5Z {
   padding-top: 30px;
   padding-bottom: 30px;
