create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4169,7 +4169,7 @@ body {
 .cid-r9UmnLM6bl {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #767676;
+  background-color: #55b4d4;
 }
 .cid-r9UmnLM6bl .line {
   background-color: #ffffff;
@@ -4224,6 +4224,11 @@ body {
 }
 .cid-rb95eyvmJh .mbr-text {
   color: #767676;
+}
+.cid-rb976D4YIt {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/estonia-2-2000x1000.jpg");
 }
 .cid-qroapysk5Z {
   padding-top: 30px;
