create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4119,6 +4119,31 @@ body {
 .cid-r9PUPvmN0B .mbr-section-btn {
   text-align: right;
 }
+.cid-rbaMQnIjHF {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-rbaMQnIjHF h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rbaMQnIjHF p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rbaMQnIjHF .card-box {
+  padding-top: 2rem;
+}
+.cid-rbaMQnIjHF .card-wrapper {
+  height: 100%;
+}
+.cid-rb9mNl6d7g {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/screen-shot-2018-12-03-at-14.25.49-1682x926.png");
+}
 .cid-r9Unguftue {
   padding-top: 45px;
   padding-bottom: 45px;
