--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4119,6 +4119,30 @@ body {
 .cid-r9PUPvmN0B .mbr-section-btn {
   text-align: right;
 }
+.cid-rbe9frL0R2 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-rbe9frL0R2 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rbe9frL0R2 p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rbe9frL0R2 .card-box {
+  padding-top: 2rem;
+}
+.cid-rbe9frL0R2 .card-wrapper {
+  height: 100%;
+}
+.cid-rbe8B3ck7M {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 .cid-rbaMQnIjHF {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -4332,6 +4356,46 @@ body {
   padding-top: 60px;
   padding-bottom: 60px;
   background-image: url("../../../assets/images/estonia-2-2000x1000.jpg");
+}
+.cid-rbe7zpzVEh {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rbe7zpzVEh .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rbe7zpzVEh .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rbe7zpzVEh .mbr-text {
+  color: #767676;
+}
+.cid-rbe7MTUjgv {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rbe7MTUjgv .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rbe7MTUjgv .mbr-figure {
+    padding-top: 1rem;
+  }
+}
+.cid-rbe7MTUjgv .mbr-text {
+  color: #767676;
+}
+.cid-rbe8niEDkd {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .cid-qroapysk5Z {
   padding-top: 30px;
