--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5866,6 +5866,89 @@ body {
   padding-top: 90px;
   padding-bottom: 90px;
 }
+.cid-rblTCZ4ZYD {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background: #ffffff;
+}
+.cid-rblTCZ4ZYD .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-rblTCZ4ZYD .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-rblTCZ4ZYD .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-rblTCZ4ZYD .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-rblTCZ4ZYD .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-rblTCZ4ZYD .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-rblTCZ4ZYD .img-item {
+    width: 100% !important;
+  }
+  .cid-rblTCZ4ZYD .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
+  }
+}
+.cid-rblV3cYMDL {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rblV3cYMDL .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rblV3cYMDL .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rblV3cYMDL .mbr-text {
+  color: #767676;
+}
+.cid-rblVe31sN3 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rblVe31sN3 .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rblVe31sN3 .mbr-figure {
+    padding-top: 1rem;
+  }
+}
+.cid-rblVe31sN3 .mbr-text {
+  color: #767676;
+}
 .cid-rbk6adh5YX {
   padding-top: 30px;
   padding-bottom: 30px;
