create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -6594,6 +6594,24 @@ body {
   padding-top: 90px;
   padding-bottom: 90px;
 }
+.cid-rbs5G46aR5 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-rbs5G46aR5 .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-rbs5G46aR5 .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-rbs5G46aR5 .mbr-text {
+  color: #767676;
+}
 .cid-rbrvBJKz4Y {
   padding-top: 30px;
   padding-bottom: 30px;
